Setup for import info from files + added brand+category creation via file
