# src/modules/import/dto/xml-product.dto.ts
@@ -1,0 +1,9 @@
+export class XmlProductDto {
+  name: string;
+  description: string;
+  price: number;
+  stock: number;
+  images: string[];
+  category: string; 
+  brand: string;    
+}
